game-server/src/main/java/com/example/demo/api/errors/ApiFieldError.java
package com.example.demo.api.errors;

public record ApiFieldError(String field, String message) {}
